--- a/ImageEdit/AndroidManifest.xml
+++ b/ImageEdit/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <application
         android:name="com.xinlan.imageedit.MainApplication"
         android:allowBackup="true"
